--- a/apps/section-02/package.json
+++ b/apps/section-02/package.json
@@ -8,15 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.27.0",
-    "eslint-config-custom": "*",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "8.27.0",
+    "eslint-config-custom": "*",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
